changed the style and the alert message

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Hello to my website I am here to learn Git and Github</h1>
-    <script src="app.j"></script>
+    <script src="app.js"></script>
 </body>
 </html>
